--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Tablas</title>
   </head>
   <body>
+
+	  	<h1>ESTO ES EL ENCABEZADO</h1>
+	  
 	<table border="1">
 	  <tr>
 	    <th>Marca</th>
@@ -42,3 +45,4 @@ width → Ancho de la tabla.
 -->
   </body>
 </html>
+
